# paper-ranker

./: .gitignore  DESIGN.md  PLAN.md  Procfile  README.md  STATUS.md  env.example  pyproject.toml
api/: __init__.py  config.py  database.py  main.py  models.py
tasks/: __init__.py  cli.py
tests/: __init__.py  test_api.py
utils/: __init__.py  embeddings.py  pdf_parser.py  pinecone_client.py  s3_client.py
